--- a/Khaliya/requirements.txt
+++ b/Khaliya/requirements.txt
@@ -1,10 +1,10 @@
-google-cloud-speech
-google-cloud-texttospeech
-google-generativeai
-twilio
-flask
-flask-sockets
-gevent
-gevent-websocket
-python-dotenv
-requests
+google-cloud-speech==2.26.0
+google-cloud-texttospeech==2.16.2
+google-generativeai==0.7.1
+twilio==8.12.0
+flask==3.0.3
+flask-sockets==0.2.1
+gevent==24.2.1
+gevent-websocket==0.10.1
+python-dotenv==1.0.1
+requests==2.32.3
